--- a/practicas de clase/responsive/css/responsive1.css
+++ b/practicas de clase/responsive/css/responsive1.css
@@ -20,7 +20,8 @@
     font-weight: 900;
     font-family: cursive,fantasy;
     font-style: italic;
-    color: aqua;
+    color: aqua
+        ;
 }
 .example3{
     
